--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_failure:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GH_TOKEN
+  github_token: $GH_TOKEN # Set in travis-ci.com dashboard
   local_dir: output
   on:
     branch: master
